Fix embed high contrast mode

--- a/components/embed/index.css
+++ b/components/embed/index.css
@@ -60,14 +60,12 @@
 
 .Embed-title,
 .Embed-description {
-  --current-background: 255, 255, 255, 0;
-  --current-color: 255, 255, 255;
   padding: 0.3em 0 0.2em;
-  color: rgb(var(--current-color));
-  background-color: rgba(var(--current-background));
+  color: rgb(var(--high-contrast-dark, var(--current-background)));
+  background-color: rgba(var(--high-contrast-light, 0, 0, 0, 0));
   box-shadow:
-    0.35rem 0 0 rgba(var(--current-background)),
-    -0.35rem 0 0 rgba(var(--current-background));
+    0.35rem 0 0 rgba(var(--high-contrast-light, 0, 0, 0, 0)),
+    -0.35rem 0 0 rgba(var(--high-contrast-light, 0, 0, 0, 0));
 }
 
 .Embed-title {
